--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
+        "@eslint/js": "^9.0.0",
         "@types/react": "~18.2.45",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react": "^7.34.1",
+        "globals": "^15.0.0",
         "prettier": "3.2.5",
-        "typescript": "^5.1.3"
+        "typescript": "^5.1.3",
+        "typescript-eslint": "^7.7.0"
     },
     "private": true
 }
