--- a/package.json
+++ b/package.json
@@ -1,31 +1,41 @@
 {
-    "name": "astro-native-rebirth",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "prettier": "npx prettier . --write"
-    },
-    "dependencies": {
-        "expo": "~50.0.14",
-        "expo-status-bar": "~1.11.1",
-        "react": "18.2.0",
-        "react-native": "0.73.6"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@eslint/js": "^9.0.0",
-        "@types/react": "~18.2.45",
-        "babel-plugin-module-resolver": "^5.0.2",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react": "^7.34.1",
-        "globals": "^15.0.0",
-        "prettier": "3.2.5",
-        "typescript": "^5.1.3",
-        "typescript-eslint": "^7.7.0"
-    },
-    "private": true
+  "name": "astro-native-rebirth",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "prettier": "npx prettier . --write",
+    "storybook-generate": "sb-rn-get-stories"
+  },
+  "dependencies": {
+    "expo": "~50.0.14",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-native-community/slider": "^4.5.2",
+    "@storybook/addon-ondevice-actions": "^7.6.18",
+    "@storybook/addon-ondevice-controls": "^7.6.18",
+    "@storybook/react-native": "^7.6.18",
+    "@types/react": "~18.2.45",
+    "babel-loader": "^8.3.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.0.0",
+    "prettier": "3.2.5",
+    "react-dom": "^18.2.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "typescript": "^5.1.3",
+    "typescript-eslint": "^7.7.0"
+  },
+  "private": true
 }
