--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "storybook-generate": "sb-rn-get-stories"
   },
   "dependencies": {
+    "@magnetis/astro-galaxy-tokens": "^1.2.3",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
