--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "baseUrl": ".",
         "paths": {
             "@components/*": ["./src/components/*"],
-            "@tokens/*": ["./src/tokens/*"]
+            "@tokens/*": ["./src/tokens/*"],
+            "@typings/*": ["./typings/*"]
         }
     }
 }
